--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "vite --host 127.0.0.1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
     "three": "^0.174.0"
   },
   "devDependencies": {
+    "lil-gui": "^0.20.0",
     "vite": "^6.2.1"
   }
 }
